[ECS-25] Add sort by likeCount